[package]
name = "redis-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
serde = "1.0.152"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.26.0", features = ["full"] }
futures = "0.3.26"
arl = "0.1.0"
fred = "5.2.0"
uuid = { version = "1.3.0", features = ["v4"] }
rand = "0.8.5"
itertools = "0.10.5"
